Rerun of all manuals

--- a/docs/Notebooks/PyNeb_manual_2.ipynb
+++ b/docs/Notebooks/PyNeb_manual_2.ipynb
@@ -28,7 +28,16 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/morisset/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import pyneb as pn\n",
     "O3 = pn.Atom('O', 3)\n",
@@ -48,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "2.5135650188001009"
+       "2.513565018800101"
       ]
      },
      "execution_count": 2,
@@ -96,8 +105,8 @@
     {
      "data": {
       "text/plain": [
-       "array([  7.81643685e-01,   1.93870586e-01,   2.44814197e-02,\n",
-       "         4.30930821e-06,   2.97166313e-10])"
+       "array([7.81643685e-01, 1.93870586e-01, 2.44814197e-02, 4.30930821e-06,\n",
+       "       2.97166313e-10])"
       ]
      },
      "execution_count": 4,
@@ -121,8 +130,8 @@
     {
      "data": {
       "text/plain": [
-       "array([  8.02454816e-01,   1.75280839e-01,   2.22544005e-02,\n",
-       "         9.94241529e-06,   2.05075367e-09])"
+       "array([8.02454816e-01, 1.75280839e-01, 2.22544005e-02, 9.94241529e-06,\n",
+       "       2.05075367e-09])"
       ]
      },
      "execution_count": 5,
@@ -195,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "array(3.4970737098460715e-21)"
+       "array(3.49707371e-21)"
       ]
      },
      "execution_count": 8,
@@ -297,7 +306,7 @@
     {
      "data": {
       "text/plain": [
-       "array(3.4970737098460715e-21)"
+       "array(3.49707371e-21)"
       ]
      },
      "execution_count": 11,
@@ -331,8 +340,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[  1.17195376e-21,   1.18350278e-21],\n",
-       "       [  1.79323749e-21,   1.80805851e-21]])"
+       "array([[1.17195376e-21, 1.18350278e-21],\n",
+       "       [1.79323749e-21, 1.80805851e-21]])"
       ]
      },
      "execution_count": 12,
@@ -356,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "array([  1.17195376e-21,   1.80805851e-21])"
+       "array([1.17195376e-21, 1.80805851e-21])"
       ]
      },
      "execution_count": 13,
@@ -400,7 +409,7 @@
     {
      "data": {
       "text/plain": [
-       "10070.108613008601"
+       "10070.1086130086"
       ]
      },
      "execution_count": 14,
@@ -538,7 +547,7 @@
     {
      "data": {
       "text/plain": [
-       "8303.6441184966006"
+       "8303.6441184966"
       ]
      },
      "execution_count": 18,
@@ -574,7 +583,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 14936.84544261,  16724.87927208])"
+       "array([14936.84544261, 16724.87927208])"
       ]
      },
      "execution_count": 19,
@@ -598,7 +607,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 14936.84544261,  16755.22374476])"
+       "array([14936.84544261, 16755.22374476])"
       ]
      },
      "execution_count": 20,
@@ -642,7 +651,7 @@
     {
      "data": {
       "text/plain": [
-       "710.31244523435123"
+       "710.3124452343512"
       ]
      },
      "execution_count": 21,
@@ -710,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "7.5706366241087909e-07"
+       "7.570636624108791e-07"
       ]
      },
      "execution_count": 23,
@@ -734,7 +743,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -808,7 +816,6 @@
       "warng _ManageAtomicData: rec data not available for Mg7\n",
       "warng _ManageAtomicData: rec data not available for Na4\n",
       "warng _ManageAtomicData: rec data not available for Na6\n",
-      "warng _ManageAtomicData: rec data not available for Ne2\n",
       "warng _ManageAtomicData: rec data not available for Ne3\n",
       "warng _ManageAtomicData: rec data not available for Ne4\n",
       "warng _ManageAtomicData: rec data not available for Ne5\n",
@@ -837,7 +844,8 @@
       "warng _ManageAtomicData: rec data not available for Fe6\n",
       "warng _ManageAtomicData: rec data not available for Fe7\n",
       "warng _ManageAtomicData: rec data not available for Fe2\n",
-      "warng _ManageAtomicData: rec data not available for P2\n"
+      "warng _ManageAtomicData: rec data not available for P2\n",
+      "warng _ManageAtomicData: rec data not available for Te3\n"
      ]
     }
    ],
@@ -857,52 +865,39 @@
     {
      "data": {
       "text/plain": [
-       "{'3He2': Atom 3He2 from 3he_ii_atom_cloudy.dat and 3he_ii_coll_cloudy.dat,\n",
-       " 'Al2': Atom Al2 from al_ii_atom_JSP86-HK87-VVF96-KS86.dat and al_ii_coll_KHAF92-TBK85-TBK84.dat,\n",
+       "{'Al2': Atom Al2 from al_ii_atom_JSP86-HK87-VVF96-KS86.dat and al_ii_coll_KHAF92-TBK85-TBK84.dat,\n",
        " 'Ar2': Atom Ar2 from ar_ii_atom_Bal06.dat and ar_ii_coll_PB95.dat,\n",
        " 'Ar3': Atom Ar3 from ar_iii_atom_MB09.dat and ar_iii_coll_MB09.dat,\n",
        " 'Ar4': Atom Ar4 from ar_iv_atom_MZ82.dat and ar_iv_coll_RB97.dat,\n",
        " 'Ar5': Atom Ar5 from ar_v_atom_LL93-MZ82-KS86.dat and ar_v_coll_GMZ95.dat,\n",
        " 'Ba2': Atom Ba2 from ba_ii_atom_C04.dat and ba_ii_coll_SB98.dat,\n",
        " 'Ba4': Atom Ba4 from ba_iv_atom_BHQZ95.dat and ba_iv_coll_SB98.dat,\n",
-       " 'Br3': Atom Br3 from br_iii_atom_BH86.dat and br_iii_coll_S97.dat,\n",
-       " 'Br4': Atom Br4 from br_iv_atom_BH86.dat and br_iv_coll_S97.dat,\n",
        " 'C1': Atom C1 from c_i_atom_FFS85.dat and c_i_coll_JBK87-PA76.dat,\n",
        " 'C1r': Atom C1 from c_i_rec_P91.func,\n",
        " 'C2': Atom C2 from c_ii_atom_GMZ98.dat and c_ii_coll_BP92.dat,\n",
        " 'C2r': Atom C2 from c_ii_rec_P91.func,\n",
        " 'C3': Atom C3 from c_iii_atom_G83-NS78-WFD96.dat and c_iii_coll_Bal85.dat,\n",
-       " 'C3r': Atom C3 from c_iii_rec_P91.func,\n",
        " 'C4': Atom C4 from c_iv_atom_WFD96.dat and c_iv_coll_AK04.dat,\n",
-       " 'C4r': Atom C4 from c_iv_rec_P91.func,\n",
        " 'Ca5': Atom Ca5 from ca_v_atom_M83-KS86.dat and ca_v_coll_GMZ95.dat,\n",
        " 'Cl2': Atom Cl2 from cl_ii_atom_MZ83.dat and cl_ii_coll_T04.dat,\n",
        " 'Cl3': Atom Cl3 from cl_iii_atom_M83-KS86.dat and cl_iii_coll_BZ89.dat,\n",
        " 'Cl4': Atom Cl4 from cl_iv_atom_KS86-MZ82-EM84.dat and cl_iv_coll_GMZ95.dat,\n",
-       " 'Fe2': Atom Fe2 from fe_ii_atom_B15.dat and fe_ii_coll_B15.dat,\n",
        " 'Fe3': Atom Fe3 from fe_iii_atom_Q96_J00.dat and fe_iii_coll_Z96.dat,\n",
-       " 'Fe4': Atom Fe4 from fe_iv_atom_FFRR08.dat and fe_iv_coll_ZP97.dat,\n",
-       " 'Fe5': Atom Fe5 from fe_v_atom_Nal00.dat and fe_v_coll_BGMcL07.dat,\n",
-       " 'Fe6': Atom Fe6 from fe_vi_atom_CP00.dat and fe_vi_coll_CP99.dat,\n",
-       " 'Fe7': Atom Fe7 from fe_vii_atom_WB08.dat and fe_vii_coll_WB08.dat,\n",
        " 'K4': Atom K4 from k_iv_atom_M83-KS86.dat and k_iv_coll_GMZ95.dat,\n",
        " 'K5': Atom K5 from k_v_atom_M83-KS86.dat and k_v_coll_BZL88.dat,\n",
-       " 'Kr3': Atom Kr3 from kr_iii_atom_BH86.dat and kr_iii_coll_S97.dat,\n",
-       " 'Kr4': Atom Kr4 from kr_iv_atom_BH86.dat and kr_iv_coll_S97.dat,\n",
-       " 'Kr5': Atom Kr5 from kr_v_atom_BH86.dat and kr_v_coll_S97.dat,\n",
        " 'Mg5': Atom Mg5 from mg_v_atom_GMZ97.dat and mg_v_coll_BZ94.dat,\n",
        " 'Mg7': Atom Mg7 from mg_vii_atom_GMZ97.dat and mg_vii_coll_LB94-U.dat,\n",
        " 'N1': Atom N1 from n_i_atom_KS86-WFD96.dat and n_i_coll_PA76-DMR76.dat,\n",
        " 'N1r': Atom N1 from n_i_rec_P91.func,\n",
        " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
-       " 'N2r': Atom N2 from n_ii_rec_P91.func,\n",
+       " 'N2r': Atom N2 from n_ii_rec_FSL11.func,\n",
        " 'N3': Atom N3 from n_iii_atom_GMZ98.dat and n_iii_coll_BP92.dat,\n",
        " 'N3r': Atom N3 from n_iii_rec_P91.func,\n",
        " 'N4': Atom N4 from n_iv_atom_WFD96.dat and n_iv_coll_RBHB94.dat,\n",
-       " 'N4r': Atom N4 from n_iv_rec_P91.func,\n",
        " 'Na4': Atom Na4 from na_iv_atom_GMZ97.dat and na_iv_coll_BZ94.dat,\n",
        " 'Na6': Atom Na6 from na_vi_atom_GMZ97.dat and na_vi_coll_LB94.dat,\n",
        " 'Ne2': Atom Ne2 from ne_ii_atom_Bal06.dat and ne_ii_coll_GMB01.dat,\n",
+       " 'Ne2r': Atom Ne2 from ne_ii_rec_KSDN98.func,\n",
        " 'Ne3': Atom Ne3 from ne_iii_atom_GMZ97.dat and ne_iii_coll_McLB00.dat,\n",
        " 'Ne4': Atom Ne4 from ne_iv_atom_BBZ89-BK88.dat and ne_iv_coll_G81.dat,\n",
        " 'Ne5': Atom Ne5 from ne_v_atom_GMZ97-U-BD93.dat and ne_v_coll_DPNP13.dat,\n",
@@ -917,21 +912,32 @@
        " 'O4': Atom O4 from o_iv_atom_GMZ98.dat and o_iv_coll_BP92.dat,\n",
        " 'O4r': Atom O4 from o_iv_rec_P91.func,\n",
        " 'O5': Atom O5 from o_v_atom_H80-NS79.dat and o_v_coll_BBDK85.dat,\n",
-       " 'O5r': Atom O5 from o_v_rec_P91.func,\n",
-       " 'P2': Atom P2 from p_ii_atom_MZ82.dat and p_ii_coll_T04.dat,\n",
-       " 'Rb4': Atom Rb4 from rb_iv_atom_BH86.dat and rb_iv_coll_S97.dat,\n",
-       " 'Rb5': Atom Rb5 from rb_v_atom_BH86.dat and rb_v_coll_S97.dat,\n",
-       " 'Rb6': Atom Rb6 from rb_vi_atom_BH86.dat and rb_vi_coll_S97.dat,\n",
        " 'S2': Atom S2 from s_ii_atom_PKW09.dat and s_ii_coll_TZ10.dat,\n",
        " 'S3': Atom S3 from s_iii_atom_PKW09.dat and s_iii_coll_TG99.dat,\n",
        " 'S4': Atom S4 from s_iv_atom_JKD86-DHKD82.dat and s_iv_coll_DHKD82.dat,\n",
-       " 'Se3': Atom Se3 from se_iii_atom_BH86.dat and se_iii_coll_S97.dat,\n",
-       " 'Se4': Atom Se4 from se_iv_atom_B05.dat and se_iv_coll_B05.dat,\n",
        " 'Si2': Atom Si2 from si_ii_atom_BL93-CSB93-N77.dat and si_ii_coll_DK91.dat,\n",
        " 'Si3': Atom Si3 from si_iii_atom_M83-OKH88-FW90-KS86.dat and si_iii_coll_DK94.dat,\n",
        " 'Xe3': Atom Xe3 from xe_iii_atom_BHQZ95.dat and xe_iii_coll_SB98.dat,\n",
        " 'Xe4': Atom Xe4 from xe_iv_atom_BHQZ95.dat and xe_iv_coll_SB98.dat,\n",
-       " 'Xe6': Atom Xe6 from xe_vi_atom_BHQZ95.dat and xe_vi_coll_SB98.dat}"
+       " 'Xe6': Atom Xe6 from xe_vi_atom_BHQZ95.dat and xe_vi_coll_SB98.dat,\n",
+       " 'Kr3': Atom Kr3 from kr_iii_atom_BH86.dat and kr_iii_coll_S97.dat,\n",
+       " 'Kr4': Atom Kr4 from kr_iv_atom_BH86.dat and kr_iv_coll_S97.dat,\n",
+       " 'Kr5': Atom Kr5 from kr_v_atom_BH86.dat and kr_v_coll_S97.dat,\n",
+       " 'Se3': Atom Se3 from se_iii_atom_BH86.dat and se_iii_coll_S97.dat,\n",
+       " 'Se4': Atom Se4 from se_iv_atom_B05.dat and se_iv_coll_B05.dat,\n",
+       " 'Br3': Atom Br3 from br_iii_atom_BH86.dat and br_iii_coll_S97.dat,\n",
+       " 'Br4': Atom Br4 from br_iv_atom_BH86.dat and br_iv_coll_S97.dat,\n",
+       " 'Rb4': Atom Rb4 from rb_iv_atom_BH86.dat and rb_iv_coll_S97.dat,\n",
+       " 'Rb5': Atom Rb5 from rb_v_atom_BH86.dat and rb_v_coll_S97.dat,\n",
+       " 'Rb6': Atom Rb6 from rb_vi_atom_BH86.dat and rb_vi_coll_S97.dat,\n",
+       " 'Fe4': Atom Fe4 from fe_iv_atom_FFRR08.dat and fe_iv_coll_ZP97.dat,\n",
+       " 'Fe5': Atom Fe5 from fe_v_atom_Nal00.dat and fe_v_coll_BGMcL07.dat,\n",
+       " 'Fe6': Atom Fe6 from fe_vi_atom_CP00.dat and fe_vi_coll_CP99.dat,\n",
+       " 'Fe7': Atom Fe7 from fe_vii_atom_WB08.dat and fe_vii_coll_WB08.dat,\n",
+       " '3He2': Atom 3He2 from 3he_ii_atom_cloudy.dat and 3he_ii_coll_cloudy.dat,\n",
+       " 'Fe2': Atom Fe2 from fe_ii_atom_B15.dat and fe_ii_coll_B15.dat,\n",
+       " 'P2': Atom P2 from p_ii_atom_MZ82.dat and p_ii_coll_T04.dat,\n",
+       " 'Te3': Atom Te3 from te_iii_atom_M18.dat and te_iii_coll_M18.dat}"
       ]
      },
      "execution_count": 26,
@@ -966,7 +972,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75\n"
+      "73\n"
      ]
     }
    ],
@@ -1033,18 +1039,14 @@
        " 'C2': Atom C2 from c_ii_atom_GMZ98.dat and c_ii_coll_BP92.dat,\n",
        " 'C2r': Atom C2 from c_ii_rec_P91.func,\n",
        " 'C3': Atom C3 from c_iii_atom_G83-NS78-WFD96.dat and c_iii_coll_Bal85.dat,\n",
-       " 'C3r': Atom C3 from c_iii_rec_P91.func,\n",
        " 'C4': Atom C4 from c_iv_atom_WFD96.dat and c_iv_coll_AK04.dat,\n",
-       " 'C4r': Atom C4 from c_iv_rec_P91.func,\n",
        " 'N1': Atom N1 from n_i_atom_KS86-WFD96.dat and n_i_coll_PA76-DMR76.dat,\n",
        " 'N1r': Atom N1 from n_i_rec_P91.func,\n",
        " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
-       " 'N2r': Atom N2 from n_ii_rec_P91.func,\n",
+       " 'N2r': Atom N2 from n_ii_rec_FSL11.func,\n",
        " 'N3': Atom N3 from n_iii_atom_GMZ98.dat and n_iii_coll_BP92.dat,\n",
        " 'N3r': Atom N3 from n_iii_rec_P91.func,\n",
        " 'N4': Atom N4 from n_iv_atom_WFD96.dat and n_iv_coll_RBHB94.dat,\n",
-       " 'N4r': Atom N4 from n_iv_rec_P91.func,\n",
-       " 'N5r': Atom N5 from n_v_rec_P91.func,\n",
        " 'O1': Atom O1 from o_i_atom_WFD96.dat and o_i_coll_BK95.dat,\n",
        " 'O1r': Atom O1 from o_i_rec_P91.func,\n",
        " 'O2': Atom O2 from o_ii_atom_FFT04.dat and o_ii_coll_Kal09.dat,\n",
@@ -1053,9 +1055,7 @@
        " 'O3r': Atom O3 from o_iii_rec_P91.func,\n",
        " 'O4': Atom O4 from o_iv_atom_GMZ98.dat and o_iv_coll_BP92.dat,\n",
        " 'O4r': Atom O4 from o_iv_rec_P91.func,\n",
-       " 'O5': Atom O5 from o_v_atom_H80-NS79.dat and o_v_coll_BBDK85.dat,\n",
-       " 'O5r': Atom O5 from o_v_rec_P91.func,\n",
-       " 'O6r': Atom O6 from o_vi_rec_P91.func}"
+       " 'O5': Atom O5 from o_v_atom_H80-NS79.dat and o_v_coll_BBDK85.dat}"
       ]
      },
      "execution_count": 29,
@@ -1100,13 +1100,13 @@
     {
      "data": {
       "text/plain": [
-       "{'Ar3': Atom Ar3 from ar_iii_atom_MB09.dat and ar_iii_coll_MB09.dat,\n",
-       " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
-       " 'N2r': Atom N2 from n_ii_rec_P91.func,\n",
-       " 'O2': Atom O2 from o_ii_atom_FFT04.dat and o_ii_coll_Kal09.dat,\n",
+       "{'O2': Atom O2 from o_ii_atom_FFT04.dat and o_ii_coll_Kal09.dat,\n",
        " 'O2r': Atom O2 from o_ii_rec_SSB17-B-opt.hdf5,\n",
        " 'O3': Atom O3 from o_iii_atom_FFT04-SZ00.dat and o_iii_coll_SSB14.dat,\n",
-       " 'O3r': Atom O3 from o_iii_rec_P91.func}"
+       " 'O3r': Atom O3 from o_iii_rec_P91.func,\n",
+       " 'Ar3': Atom Ar3 from ar_iii_atom_MB09.dat and ar_iii_coll_MB09.dat,\n",
+       " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
+       " 'N2r': Atom N2 from n_ii_rec_FSL11.func}"
       ]
      },
      "execution_count": 31,
@@ -1164,7 +1164,7 @@
     {
      "data": {
       "text/plain": [
-       "array(5.9490128036162234e-21)"
+       "array(5.9490128e-21)"
       ]
      },
      "execution_count": 33,
@@ -1285,9 +1285,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
