--- a/docs/Notebooks/PyNeb_manual_6.ipynb
+++ b/docs/Notebooks/PyNeb_manual_6.ipynb
@@ -6,7 +6,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/morisset/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -160,10 +169,10 @@
      "output_type": "stream",
      "text": [
       "Line O3 O3_5007A evaluated as L(5007)\n",
-      "Observed intensity: [ 1.4  1.3]\n",
-      "Observed error: [ 0.  0.]\n",
-      "Corrected intensity: [ 22.58352855  20.97041937]\n",
-      "Corrected error: [ 0.  0.]\n"
+      "Observed intensity: [1.4 1.3]\n",
+      "Observed error: [0. 0.]\n",
+      "Corrected intensity: [22.58352855 20.97041937]\n",
+      "Corrected error: [0. 0.]\n"
      ]
     }
    ],
@@ -223,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4861.33165987\n"
+      "4861.3316598713955\n"
      ]
     }
    ],
@@ -282,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.836202049828\n"
+      "0.8362020498282933\n"
      ]
     }
    ],
@@ -361,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting observations1.dat\n"
+      "Writing observations1.dat\n"
      ]
     }
    ],
@@ -497,7 +506,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting observations2.dat\n"
+      "Writing observations2.dat\n"
      ]
     }
    ],
@@ -538,7 +547,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting observations3.dat\n"
+      "Writing observations3.dat\n"
      ]
     }
    ],
@@ -619,6 +628,7 @@
       "N2 ['6527A', '6548A', '6584A', '3058A', '3063A', '3071A', '5755A', '2137A', '2139A', '2143A', '3177A', '7092A', '205.3m', '76.4m', '121.8m']\n",
       "N3 ['1749A', '1754A', '1747A', '1752A', '1744A', '1750A', '990A', '992A', '2280A', '2284A', '2288A', '2280A', '2283A', '2287A', '763A', '764A', '1356A', '1357A', '3334A', '3335A', '57.4m', '167.5m', '71.0m', '123.3m', '1492.1m']\n",
       "N4 ['1488A', '1487A', '1483A', '765A', '1575A', '1576A', '1580A', '158.4m', '48.3m', '69.4m']\n",
+      "N5 ['1239A', '1243A']\n",
       "Na3 ['7.3m']\n",
       "Na4 ['3242A', '3362A', '3416A', '1504A', '1529A', '1540A', '2804A', '9.0m', '6.34m', '21.3m']\n",
       "Na6 ['2816A', '2872A', '2972A', '1343A', '1356A', '1378A', '2569A', '14.39m', '5.4m', '8.6m']\n",
@@ -644,6 +654,7 @@
       "Se4 ['2.28m']\n",
       "Si2 ['2335A', '2351A', '2329A', '2345A', '2320A', '1808A', '1817A', '8007A', '8077A', '8193A', '7997A', '8067A', '8183A', '34.8m', '92.3m', '35.2m', '57.1m', '631.5m']\n",
       "Si3 ['1897A', '1892A', '1883A', '1206A', '3315A', '3329A', '3359A', '77.7m', '25.7m', '38.2m']\n",
+      "Si4 ['1394A', '1403A']\n",
       "Xe3 ['5847A', '2769A', '3574A', '3800A', '5261A', '1.23m', '1.02m', '6.0m', '1.11m', '1.37m']\n",
       "Xe4 ['7535A', '5709A', '3566A', '6769A', '9498A', '2804A', '4467A', '5511A', '2.36m', '1.31m']\n",
       "Xe6 ['6409A']\n"
@@ -892,7 +903,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.16483175]\n"
+      "[0.16483175]\n"
      ]
     }
    ],
@@ -970,31 +981,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ar3_7136A 3.88214978929\n",
+      "Ar3_7136A 3.8821497892916716\n",
       "H1r_4861A 100.0\n",
-      "H1r_6563A 285.0\n",
-      "N2_5755A 0.453846550278\n",
-      "N2_6548A 5.65746807125\n",
-      "N2_6584A 15.6684748528\n",
-      "Ne2_12.8m 4.82602971256\n",
-      "Ne3_15.6m 19.8027022262\n",
-      "Ne3_3869A 21.7218621627\n",
-      "Ne3_3968A 7.25498470993\n",
-      "O1_6300A 1.42792388246\n",
-      "O1_6364A 0.45369747694\n",
-      "O2_3726A 46.5764398853\n",
-      "O2_3729A 21.8120580007\n",
-      "O2_7319A+ 5.1064244648\n",
-      "O2_7330A+ 4.03377032255\n",
-      "O3_4363A 4.68705107403\n",
-      "O3_5007A 425.599154595\n",
-      "S2_4069A 0.95040451703\n",
-      "S2_4076A 0.502681231482\n",
-      "S2_6716A 0.995405412218\n",
-      "S2_6731A 1.77656378862\n",
-      "S3_18.7m 5.80184591117\n",
-      "S3_6312A 0.641461012117\n",
-      "S4_10.5m 4.07647872134\n"
+      "H1r_6563A 284.99999999999994\n",
+      "N2_5755A 0.4538465502784229\n",
+      "N2_6548A 5.6574680712548835\n",
+      "N2_6584A 15.668474852815743\n",
+      "Ne2_12.8m 4.826029712555136\n",
+      "Ne3_15.6m 19.8027022261585\n",
+      "Ne3_3869A 21.721862162658756\n",
+      "Ne3_3968A 7.2549847099308185\n",
+      "O1_6300A 1.4279238824617235\n",
+      "O1_6364A 0.4536974769399841\n",
+      "O2_3726A 46.57643988525366\n",
+      "O2_3729A 21.812058000703153\n",
+      "O2_7319A+ 5.106424464804535\n",
+      "O2_7330A+ 4.033770322547239\n",
+      "O3_4363A 4.687051074032947\n",
+      "O3_5007A 425.5991545953096\n",
+      "S2_4069A 0.95040451703046\n",
+      "S2_4076A 0.5026812314820526\n",
+      "S2_6716A 0.9954054122181787\n",
+      "S2_6731A 1.7765637886180774\n",
+      "S3_18.7m 5.801845911170803\n",
+      "S3_6312A 0.6414610121168983\n",
+      "S4_10.5m 4.076478721339332\n"
      ]
     }
    ],
@@ -1031,8 +1042,8 @@
     {
      "data": {
       "text/plain": [
-       "array(['Ar3', 'H1r', 'N2', 'Ne2', 'Ne3', 'O1', 'O2', 'O3', 'S2', 'S3', 'S4'], \n",
-       "      dtype='<U3')"
+       "array(['Ar3', 'H1r', 'N2', 'Ne2', 'Ne3', 'O1', 'O2', 'O3', 'S2', 'S3',\n",
+       "       'S4'], dtype='<U3')"
       ]
      },
      "execution_count": 35,
@@ -1087,31 +1098,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S4_10.5m      4.076    0.192\n",
-      "Ne2_12.8m     4.826    0.023\n",
-      "Ne3_15.6m    19.803    0.427\n",
-      "S3_18.7m      5.802    0.337\n",
-      "O2_3726A     46.576    0.548\n",
-      "O2_3729A     21.812    0.576\n",
-      "Ne3_3869A    21.722    0.975\n",
-      "Ne3_3968A     7.255    0.532\n",
-      "S2_4069A      0.950    0.235\n",
-      "S2_4076A      0.503    0.971\n",
-      "O3_4363A      4.687    0.519\n",
-      "H1r_4861A   100.000    0.709\n",
-      "O3_5007A    425.599    0.616\n",
-      "N2_5755A      0.454    0.884\n",
-      "S3_6312A      0.641    0.522\n",
-      "O1_6300A      1.428    0.391\n",
-      "O1_6364A      0.454    0.297\n",
-      "N2_6548A      5.657    0.624\n",
-      "H1r_6563A   285.000    0.251\n",
-      "N2_6584A     15.668    0.926\n",
-      "S2_6716A      0.995    0.728\n",
-      "S2_6731A      1.777    0.452\n",
-      "Ar3_7136A     3.882    0.448\n",
-      "O2_7319A+     5.106    0.160\n",
-      "O2_7330A+     4.034    0.715\n"
+      "S4_10.5m      4.076    0.672\n",
+      "Ne2_12.8m     4.826    0.279\n",
+      "Ne3_15.6m    19.803    0.419\n",
+      "S3_18.7m      5.802    0.822\n",
+      "O2_3726A     46.576    0.957\n",
+      "O2_3729A     21.812    0.220\n",
+      "Ne3_3869A    21.722    0.319\n",
+      "Ne3_3968A     7.255    0.009\n",
+      "S2_4069A      0.950    0.674\n",
+      "S2_4076A      0.503    0.656\n",
+      "O3_4363A      4.687    0.536\n",
+      "H1r_4861A   100.000    0.611\n",
+      "O3_5007A    425.599    0.757\n",
+      "N2_5755A      0.454    0.552\n",
+      "S3_6312A      0.641    0.953\n",
+      "O1_6300A      1.428    0.755\n",
+      "O1_6364A      0.454    0.524\n",
+      "N2_6548A      5.657    0.149\n",
+      "H1r_6563A   285.000    0.699\n",
+      "N2_6584A     15.668    0.821\n",
+      "S2_6716A      0.995    0.638\n",
+      "S2_6731A      1.777    0.156\n",
+      "Ar3_7136A     3.882    0.443\n",
+      "O2_7319A+     5.106    0.050\n",
+      "O2_7330A+     4.034    0.159\n"
      ]
     }
    ],
@@ -1142,31 +1153,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S4_10.5m      4.076    0.192\n",
-      "Ne2_12.8m     4.826    0.023\n",
-      "Ne3_15.6m    19.803    0.427\n",
-      "S3_18.7m      5.802    0.337\n",
-      "O2_3726A     46.576    0.548\n",
-      "O2_3729A     21.812    0.576\n",
-      "Ne3_3869A    21.722    0.975\n",
-      "Ne3_3968A     7.255    0.532\n",
-      "S2_4069A      0.950    0.235\n",
-      "S2_4076A      0.503    0.971\n",
-      "O3_4363A      4.687    0.519\n",
-      "H1r_4861A   100.000    0.709\n",
-      "O3_5007A    425.599    0.616\n",
-      "N2_5755A      0.454    0.884\n",
-      "S3_6312A      0.641    0.522\n",
-      "O1_6300A      1.428    0.391\n",
-      "O1_6364A      0.454    0.297\n",
-      "N2_6548A      5.657    0.624\n",
-      "H1r_6563A   285.000    0.251\n",
-      "N2_6584A     15.668    0.926\n",
-      "S2_6716A      0.995    0.728\n",
-      "S2_6731A      1.777    0.452\n",
-      "Ar3_7136A     3.882    0.448\n",
-      "O2_7319A+     5.106    0.160\n",
-      "O2_7330A+     4.034    0.715\n",
+      "S4_10.5m      4.076    0.672\n",
+      "Ne2_12.8m     4.826    0.279\n",
+      "Ne3_15.6m    19.803    0.419\n",
+      "S3_18.7m      5.802    0.822\n",
+      "O2_3726A     46.576    0.957\n",
+      "O2_3729A     21.812    0.220\n",
+      "Ne3_3869A    21.722    0.319\n",
+      "Ne3_3968A     7.255    0.009\n",
+      "S2_4069A      0.950    0.674\n",
+      "S2_4076A      0.503    0.656\n",
+      "O3_4363A      4.687    0.536\n",
+      "H1r_4861A   100.000    0.611\n",
+      "O3_5007A    425.599    0.757\n",
+      "N2_5755A      0.454    0.552\n",
+      "S3_6312A      0.641    0.953\n",
+      "O1_6300A      1.428    0.755\n",
+      "O1_6364A      0.454    0.524\n",
+      "N2_6548A      5.657    0.149\n",
+      "H1r_6563A   285.000    0.699\n",
+      "N2_6584A     15.668    0.821\n",
+      "S2_6716A      0.995    0.638\n",
+      "S2_6731A      1.777    0.156\n",
+      "Ar3_7136A     3.882    0.443\n",
+      "O2_7319A+     5.106    0.050\n",
+      "O2_7330A+     4.034    0.159\n",
       "Cl3_5518A     5.534    3.953\n"
      ]
     }
@@ -1221,32 +1232,32 @@
     {
      "data": {
       "text/plain": [
-       "{'Ar3_7136A': 3.8821497892916716,\n",
-       " 'Cl3_5518A': 5.5338388981739151,\n",
-       " 'H1r_4861A': 100.0,\n",
-       " 'H1r_6563A': 284.99999999999994,\n",
-       " 'N2_5755A': 0.45384655027842291,\n",
-       " 'N2_6548A': 5.6574680712548835,\n",
-       " 'N2_6584A': 15.668474852815743,\n",
-       " 'Ne2_12.8m': 4.8260297125551359,\n",
-       " 'Ne3_15.6m': 19.802702226158502,\n",
+       "{'S4_10.5m': 4.076478721339332,\n",
+       " 'Ne2_12.8m': 4.826029712555136,\n",
+       " 'Ne3_15.6m': 19.8027022261585,\n",
+       " 'S3_18.7m': 5.801845911170803,\n",
+       " 'O2_3726A': 46.57643988525366,\n",
+       " 'O2_3729A': 21.812058000703153,\n",
        " 'Ne3_3869A': 21.721862162658756,\n",
        " 'Ne3_3968A': 7.2549847099308185,\n",
+       " 'S2_4069A': 0.95040451703046,\n",
+       " 'S2_4076A': 0.5026812314820526,\n",
+       " 'O3_4363A': 4.687051074032947,\n",
+       " 'H1r_4861A': 100.0,\n",
+       " 'O3_5007A': 425.5991545953096,\n",
+       " 'N2_5755A': 0.4538465502784229,\n",
+       " 'S3_6312A': 0.6414610121168983,\n",
        " 'O1_6300A': 1.4279238824617235,\n",
-       " 'O1_6364A': 0.45369747693998408,\n",
-       " 'O2_3726A': 46.576439885253663,\n",
-       " 'O2_3729A': 21.812058000703153,\n",
-       " 'O2_7319A+': 5.1064244648045349,\n",
-       " 'O2_7330A+': 4.0337703225472392,\n",
-       " 'O3_4363A': 4.6870510740329472,\n",
-       " 'O3_5007A': 425.59915459530959,\n",
-       " 'S2_4069A': 0.95040451703046003,\n",
-       " 'S2_4076A': 0.50268123148205257,\n",
-       " 'S2_6716A': 0.99540541221817869,\n",
+       " 'O1_6364A': 0.4536974769399841,\n",
+       " 'N2_6548A': 5.6574680712548835,\n",
+       " 'H1r_6563A': 284.99999999999994,\n",
+       " 'N2_6584A': 15.668474852815743,\n",
+       " 'S2_6716A': 0.9954054122181787,\n",
        " 'S2_6731A': 1.7765637886180774,\n",
-       " 'S3_18.7m': 5.8018459111708029,\n",
-       " 'S3_6312A': 0.64146101211689832,\n",
-       " 'S4_10.5m': 4.0764787213393321}"
+       " 'Ar3_7136A': 3.8821497892916716,\n",
+       " 'O2_7319A+': 5.106424464804535,\n",
+       " 'O2_7330A+': 4.033770322547239,\n",
+       " 'Cl3_5518A': 5.533838898173915}"
       ]
      },
      "execution_count": 41,
@@ -1268,7 +1279,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 4.03377032,  0.71466343])"
+       "array([4.03377032, 0.15866148])"
       ]
      },
      "execution_count": 42,
@@ -1308,7 +1319,6 @@
       "warng _ManageAtomicData: rec data not available for Ar3\n",
       "warng _ManageAtomicData: atom data not available for H1\n",
       "warng _ManageAtomicData: coll data not available for H1\n",
-      "warng _ManageAtomicData: rec data not available for Ne2\n",
       "warng _ManageAtomicData: rec data not available for Ne3\n",
       "warng _ManageAtomicData: rec data not available for S2\n",
       "warng _ManageAtomicData: rec data not available for S3\n",
@@ -1347,13 +1357,13 @@
     {
      "data": {
       "text/plain": [
-       "{'Ar3': array([  3.21287725e-07]),\n",
-       " 'N2': array([  3.22649264e-06]),\n",
-       " 'Ne3': array([  2.36596811e-05]),\n",
-       " 'O2': array([  3.64228102e-05]),\n",
-       " 'O3': array([ 0.00014833]),\n",
-       " 'S2': array([  6.71633117e-08]),\n",
-       " 'S3': array([  1.42901804e-06])}"
+       "{'Ar3': array([3.21287725e-07]),\n",
+       " 'N2': array([3.22649264e-06]),\n",
+       " 'Ne3': array([2.36596811e-05]),\n",
+       " 'O2': array([3.64228102e-05]),\n",
+       " 'O3': array([0.00014833]),\n",
+       " 'S2': array([6.71633117e-08]),\n",
+       " 'S3': array([1.42901804e-06])}"
       ]
      },
      "execution_count": 44,
@@ -1382,9 +1392,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
