--- a/docs/Notebooks/PyNeb_manual_7b.ipynb
+++ b/docs/Notebooks/PyNeb_manual_7b.ipynb
@@ -6,7 +6,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/morisset/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import pyneb as pn\n",
     "import numpy as np"
@@ -176,16 +185,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ar3 [2.152894644253984e-07]\n",
+      "Ar3 [2.1528946442539843e-07]\n",
       "H1r [1.0, 1.0118929765886284]\n",
-      "N2 [2.2896520932105462e-06, 2.4132982669892579e-06, 2.2716848328034669e-06]\n",
-      "Ne2 [5.9051114501146047e-06]\n",
-      "Ne3 [1.2924607125398534e-05, 1.1873083428775325e-05, 1.3165090486499409e-05]\n",
-      "O1 [1.4587786123355056e-06, 1.4512515727307561e-06]\n",
-      "O2 [2.9484966486284868e-05, 3.0401998417595668e-05, 2.1076205142152512e-05, 1.9456664936147367e-05]\n",
-      "O3 [7.8241501660366078e-05, 8.3431919237520271e-05]\n",
+      "N2 [2.289652093210546e-06, 2.413298266989258e-06, 2.271684832803467e-06]\n",
+      "Ne2 [5.905111450114605e-06]\n",
+      "Ne3 [1.2924607125398534e-05, 1.1873083428775329e-05, 1.316509048649941e-05]\n",
+      "O1 [1.4587786123355058e-06, 1.4512515727307564e-06]\n",
+      "O2 [2.9484966486284868e-05, 3.040199841759567e-05, 2.1076205142152512e-05, 1.9456664936147367e-05]\n",
+      "O3 [7.824150166036608e-05, 8.343191923752029e-05]\n",
       "S2 [1.195881774170362e-07, 1.9578449298916088e-07, 1.5124222321153e-07, 1.331376274623044e-07]\n",
-      "S3 [8.5987288919891947e-07, 6.6551708910155244e-07]\n",
+      "S3 [8.598728891989195e-07, 6.655170891015524e-07]\n",
       "S4 [1.4765564919152136e-07]\n"
      ]
     }
@@ -244,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
